# tauri-plugin-mcp-manager

./: .lintstagedrc  Cargo.toml  LICENSE  README.md  build.rs  package.json
dist-js/: commands.d.ts  index.cjs  index.d.ts  index.js  transport.d.ts
examples/tauri-app/: README.md  example.config.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
examples/tauri-app/src/: App.svelte  App.vue
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/components/: McpManager.vue
guest-js/: commands.ts  index.ts  transport.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: kill_mcp_server.toml  send_to_mcp_server.toml  spawn_mcp_server.toml  start_mcp_server.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs
